Fixed update row overflow and cell width distortion. Added window reload syntax.

--- a/style.css
+++ b/style.css
@@ -40,7 +40,14 @@ input {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    table-layout:fixed;
 }
+
+td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 td.healthy {
     background-color: green;
     height: 25px;
@@ -69,4 +76,7 @@ td.update {
     background-color: white;
     height: 25px;
     width: 75px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
